--- a/app/views/pic_templates/show.html.erb
+++ b/app/views/pic_templates/show.html.erb
@@ -1,7 +1,23 @@
 <h1>Photo Details</h1>
 
-<img src ="<%= @the_source %>">
-
 <p>
     <%= @the_caption %>
 </p>
+
+<img src ="<%= @the_source %>">
+
+<p>
+  posted at <%= Photo.updated_at %>
+</p>
+
+<a href="/photos" class="btn btn-default">
+  Go back
+</a>
+
+<a href="/photos/<%= @picture_number %>/edit" class="btn btn-default">
+  Edit
+</a>
+
+<a href="/delete_photo/<%= @picture_number %>" class="btn btn-default">
+  Delete
+</a>
