index links work

--- a/app/views/pic_templates/show.html.erb
+++ b/app/views/pic_templates/show.html.erb
@@ -7,7 +7,7 @@
 <img src ="<%= @the_source %>">
 
 <p>
-  posted at <%= Photo.updated_at %>
+  About <%= @time_posted %> hours ago
 </p>
 
 <a href="/photos" class="btn btn-default">
