editing pictures partial

--- a/app/views/pic_templates/update_row.html.erb
+++ b/app/views/pic_templates/update_row.html.erb
@@ -1,1 +1,9 @@
-<h1>Hi update_row!</h1>
+<h1>You edited a photo!</h1>
+
+<p>
+  <a href="/photos/<%= @picture_number %>">
+    Click here
+  </a>
+
+  to check it out.
+</p>
