--- a/app/views/pic_templates/new_form.html.erb
+++ b/app/views/pic_templates/new_form.html.erb
@@ -6,7 +6,7 @@
       Image URL
     </label>
 
-    <input id="source_input" type="text" name="the_source" value=>
+    <input id="source_input" type="text" name="the_source">
   </div>
 
   <div>
