--- a/app/views/pic_templates/edit_form.html.erb
+++ b/app/views/pic_templates/edit_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Photo</h1>
 
-<form action="/update_photo/148">
+<form action="/update_photo/<%= @picture_number %>">
   <div>
     <label for="source_input">
       Image URL
