--- a/app/views/pic_templates/edit_form.html.erb
+++ b/app/views/pic_templates/edit_form.html.erb
@@ -1,12 +1,12 @@
 <h1>Edit Photo</h1>
 
-<form action="/update_photo/<%= @pic.id %>">
+<form action="/update_photo/<%= @picture_number %>">
   <div>
     <label for="source_input">
       Image URL
     </label>
 
-    <input id="source_input" type="text" name="the_source" value="<%= @pic.source %>">
+    <input id="source_input" type="text" name="the_source" value="<%= @the_source %>">
   </div>
 
   <div>
@@ -14,7 +14,7 @@
       Caption
     </label>
 
-    <input id="caption_input" type="text" name="the_caption" value="<%= @pic.caption %>">
+    <input id="caption_input" type="text" name="the_caption" value="<%= @the_caption %>">
   </div>
 
   <button>
